node-port-1/httpd-nodeport-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 1-httpd-nodeport-deployment
  labels:
    app: http-webserver-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-webserver-1
  template:
    metadata:
      labels:
        app: http-webserver-1
    spec:
      containers:
      - name: http-webserver
        image: nirulabs/httpd-v1:latest
        ports:
        - containerPort: 80
