node-port-1/httpd-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: httpd-nodeport-service-one
spec: 
  type: NodePort
  selector: 
    app: http-webserver-1
  ports: 
    - port: 8080
      targetPort: 80
      nodePort: 30002
